# CAFFE_old

./: .gitignore  CMakeLists.txt  Makefile  README.md  caffeAdvectionDiffusion  doxygen.config  makefile  qtcaffe.files  qtcaffe.includes
ExampleCases/Cavity2D/case/: case.in  case.info  initialConditions.info
ExampleCases/Cavity2D/mesh/: structuredMesh.in  structuredMesh.info
ExampleCases/Cavity3D/case/: case.in  case.info  initialConditions.in  initialConditions.info
ExampleCases/Cavity3D/mesh/: decomposition.info  structuredMesh.in  structuredMesh.info
ExampleCases/Cavity3DWithIbSphere/case/: case.in  case.info  initialConditions.in  initialConditions.info
ExampleCases/Cavity3DWithIbSphere/mesh/: structuredMesh.in  structuredMesh.info
ExampleCases/Channel2D/case/: case.in
ExampleCases/Channel2D/mesh/: structuredMesh.in
ExampleCases/Channel2DWithIbSphere/case/: case.in
ExampleCases/Channel2DWithIbSphere/mesh/: structuredMesh.in
ExampleCases/Channel3D/case/: case.in  case.info  initialConditions.info
ExampleCases/Channel3D/mesh/: decomposition.info  structuredMesh.in  structuredMesh.info
Files/: sampleFile.in  sampleFile.in~  sampleHexaMeshFile.in
Misc/: caffeAsciiLogo
Modules/: CMakeLists.txt  Makefile  caffeAdvectionDiffusion.cc  caffeCoupled.cc  caffeCoupled.cpp  caffeDiffusion.cc  caffeDiffusion.cpp  caffeIbPiso.cc  caffeIbPiso.cpp  caffeIbSimple.cc  caffeMultiphasePiso.cpp  caffeMultiphaseSimple.cc  caffeMultiphaseSimple.cpp  caffePiso.cc  caffePiso.cpp  caffeSimple.cc  caffeSimple.cpp  hexaMesh.cc  hexaMesh.cpp  multiBlockHexaMesh.cc  multiBlockHexaMesh.cpp
case/: case.in
etc/: caffe.sh
mesh/: structuredMesh.in
src/: CMakeLists.txt  Makefile
src/DataStructures/: Array2D.h  Array2DI.h  Array3D.h  Array3D.tpp  Array3DI.h  CMakeLists.txt  DataStructures.cpp  DataStructures.h  SmartPointer.h  SmartPointer3D.h  SmartPointer3DI.h  SmartPointerI.h  a.out  test.cpp
src/Domains/: CMakeLists.txt  DomainInterface.cc  DomainInterface.h
src/Domains/Field/: CMakeLists.txt  Field.h  Field.tpp  FieldI.h  FlowBoundaryConditions.cc  FlowBoundaryConditions.cpp  FlowBoundaryConditions.h  InitialConditions.cc  InitialConditions.h  InitialConditions.tpp  InitialConditionsI.h  PrimitiveBoundaryCondition.cc  PrimitiveBoundaryCondition.h  PrimitiveBoundaryCondition.tpp  PrimitiveBoundaryConditionI.h  SimpleBoundaryCondition.cc  SimpleBoundaryCondition.cpp  SimpleBoundaryCondition.h
src/Domains/HexaFvmMesh/: CMakeLists.txt  HexaFvmMesh.cc  HexaFvmMesh.cpp  HexaFvmMesh.h  HexaMeshGen.cc  HexaMeshGen.cpp  HexaMeshGen.h  IndexMap.cc  IndexMap.cpp  IndexMap.h  MultiBlockHexaFvmMesh.cc  MultiBlockHexaFvmMesh.cpp  MultiBlockHexaFvmMesh.h  MultiBlockHexaMeshGen.cc  MultiBlockHexaMeshGen.cpp  MultiBlockHexaMeshGen.h  ParallelHexaFvmMesh.cpp  ParallelHexaFvmMesh.h  StructuredMesh.cc  StructuredMesh.cpp  StructuredMesh.h
src/Domains/Meshes/: BoundaryCondition.h  BoundaryConditionI.h  CMakeLists.txt  DomainIncludes.h  Field.h  FieldI.h  FixedBoundaryCondition.cc  FixedBoundaryCondition.h  FixedBoundaryConditionI.h  HexaFdmMesh.cc  HexaFdmMesh.h  HexaFdmMeshI.h  HexaFvmMesh.cc  HexaFvmMesh.h  HexaFvmMeshI.h  HexaMeshGen.cc  HexaMeshGen.h  IndexMap.cc  IndexMap.h  InitialConditions.cc  InitialConditions.h  InitialConditionsI.h  MultiBlockHexaFvmMesh.cc  MultiBlockHexaFvmMesh.h  PrimitiveMesh.cc  PrimitiveMesh.h  StructuredMesh.cc  StructuredMesh.h  StructuredMeshI.h  ZeroGradientBoundaryCondition.h  ZeroGradientBoundaryConditionI.h
src/Domains/Meshes/HexaFdmMesh/: HexaFdmMesh.cc  HexaFdmMesh.h  PrimitiveMesh.cc  PrimitiveMesh.h
src/Fields/: AdvectionDiffusionField.h  EulerFluidField.h  Field.h  FieldI.h  FieldInterface.h  ScalarField.cc  ScalarField.h  TensorField.cc  TensorField.h  VectorField.cc  VectorField.h
src/Math/: CMakeLists.txt  Field.h  FieldI.h  FiniteDifference.h  FiniteDifferenceI.h  Geometry.cc  Geometry.cpp  Geometry.h  Interpolation.cc  Interpolation.cpp  Interpolation.h  Kernel.cc  Kernel.h  Line3D.cc  Line3D.h  Makefile  MathConstants.h  Matrix.cc  Matrix.cpp  Matrix.h  Point3D.h  SparseMatrix.cc  SparseMatrix.cpp  SparseMatrix.h  SparseVector.cc  SparseVector.cpp  SparseVector.h  Sphere.cc  Sphere.cpp  Sphere.h  Tensor3D.cc  Tensor3D.h  Vector3D.cc  Vector3D.cpp  Vector3D.h
src/Parallel/: CMakeLists.txt  Parallel.cc  Parallel.cpp  Parallel.h  ParallelBuffers.cpp  ParallelBuffers.h  Vector3DBuffer.cpp  Vector3DBuffer.h
src/RunControl/: ArgsList.cc  ArgsList.cpp  ArgsList.h  CMakeLists.txt  Input.cc  Input.cpp  Input.h  InputStringProcessing.cc  InputStringProcessing.h  Makefile  Output.cc  Output.cpp  Output.h  RunControl.cc  RunControl.cpp  RunControl.h  RunControlI.h  TecplotAscii.cc  TecplotAscii.h  Time.cpp  Time.h  Version.cc  Version.h
src/Schemes/: CMakeLists.txt  Diffusion.cc  Diffusion.h  FiniteDifference.cc  FiniteDifference.h  FvScalarScheme.cpp  FvScalarScheme.h  FvScheme.cc  FvScheme.h  FvScheme.tpp  FvSchemeI.h  FvVectorScheme.cpp  FvVectorScheme.h  IbSimple.cc  IbSimple.h  LinearAdvection.cc  LinearAdvection.h  MultiphaseSimple.cc  MultiphaseSimple.cpp  MultiphaseSimple.h  Piso.cc  Piso.h  SchemeIncludes.h  SchemeInterface.h  Simple.cc  Simple.h
src/Solvers/: CMakeLists.txt  Coupled.cc  Coupled.h  Diffusion.cc  Diffusion.cpp  Diffusion.h  Euler.cc  Euler.h  EulerI.h  IbPiso.cc  IbPiso.cpp  IbPiso.h  MultiphasePiso.cpp  MultiphasePiso.h  Piso.cc  Piso.cpp  Piso.h  PredictorCorrector.cc  PredictorCorrector.h  Simple.cc  Simple.cpp  Simple.h  Solver.cc  Solver.cpp  Solver.h  SolverIncludes.h  SolverInterface.h  SolverInterfaceI.h
src/State/: AdvectionDiffusion.cc  AdvectionDiffusion.h  CMakeLists.txt  Makefile
test/: Array3DTest.cpp  CMakeLists.txt  FieldTest.cpp  FiniteDifferenceTest.cpp  GeometryTest.cc  IndexMapTest.cpp  MatrixTest.cc  MatrixTest.cpp  MultiBlockHexaMeshTest.cpp  ParallelHexaFvmMeshTest.cpp  ParallelSimpleTest.cpp  ParallelTest.cc  ParallelTest.cpp  SmartPointer3DTest.cpp  SparseMatrixTest.cc  SparseMatrixTest.cpp  Vector3DTest.cpp  matrixText  multiBlockHexaMeshTest.cc
(+36 files in other folders)
